--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,13 +29,15 @@ dist.jar=${dist.dir}/ecommerce.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.itextpdf-5.4.0.jar=P:\\Programas\\itextpdf-5.4.0.jar
 file.reference.JTattoo-1.6.13.jar=P:\\Programas\\JTattoo-1.6.13.jar
 file.reference.postgresql-42.2.24.jar=P:\\Programas\\postgresql-42.2.24.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.postgresql-42.2.24.jar}:\
-    ${file.reference.JTattoo-1.6.13.jar}
+    ${file.reference.JTattoo-1.6.13.jar}:\
+    ${file.reference.itextpdf-5.4.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
